# grpc-example

./: .gitignore  Dockerfile  MODULE.bazel  WORKSPACE
arithmetic_client/: Cargo.toml  build.rs  main.rs
arithmetic_server/: BUILD  arithmetic_rpc.go
cmd/arithmetic_server/: BUILD  server.go
gcloud/: app1-lb.yaml  arithmetic-server.yaml  ing-dep.yaml  ing-ser.yaml  ing-ser2.yaml  ingress-service.yaml  ingress.yaml  loadbalancer.yaml  nginx-lb-service.yaml  test-ing.yaml  test.yaml
proto/: BUILD  arithmetic.proto
remote/: BUILD
