[package]
name = "grpc-rust"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the Arithmetic gRPC client
name = "arithmetic-client"
path = "main.rs"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "*"